# outo-llms

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  style.md
.github/workflows/: release.yml
docs/: architecture.md  cli.md  configuration.md  development.md  engines.md  index.md  installation.md  philosophy.md  quickstart.md  security.md  server-api.md  testing.md
src/outo_llms/: __init__.py  __main__.py
src/outo_llms/cli/: __init__.py  app.py
src/outo_llms/cli/commands/: __init__.py  engine.py  models.py  reset.py  restart.py  setup.py  start.py  status.py  stop.py  version.py
src/outo_llms/core/: __init__.py  certs.py  config.py  consent.py  paths.py  process.py
src/outo_llms/engines/: __init__.py  base.py  llamacpp.py  manager.py  vllm.py
src/outo_llms/server/: __init__.py  __main__.py  accounts.py  app.py  db.py  deps.py  live.py  proxy.py  registry.py  schemas.py  usage.py
src/outo_llms/server/routes/: __init__.py  account.py  keys.py  live.py  status.py  usage.py  workspaces.py
src/outo_llms/server/ui/: __init__.py
src/outo_llms/server/ui/static/: app.js  index.html  style.css
