[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outo-llms"
version = "0.2.2"
description = "Deploy local LLMs behind your own managed API server - vLLM or llama.cpp in isolated environments, with API keys, workspaces, and usage tracking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "outo-llms contributors" }]
keywords = ["llm", "vllm", "llama.cpp", "inference", "self-hosted", "api-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "platformdirs>=4",
    "cryptography>=42",
    "pydantic>=2",
]

[project.scripts]
outo-llms = "outo_llms.cli.app:main"

[project.urls]
Homepage = "https://github.com/llaa33219/outo-llms"
Repository = "https://github.com/llaa33219/outo-llms"
Issues = "https://github.com/llaa33219/outo-llms/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/outo_llms"]

[tool.hatch.build.targets.sdist]
include = ["src/outo_llms", "docs", "README.md", "LICENSE"]
